--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,9 @@
 @import "tailwindcss";
+
+
+@theme{
+    --color-primary:#ff4d2d;
+    --color-hover-default:#e64323;
+    --color-bg-default:#fff9f6;
+    --color-border-default:#ddd;
+}
